<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>kpr_intro_til_oop</groupId>
    <artifactId>ovinger</artifactId>
    <version>1.0-SNAPSHOT</version>

    <dependencies>
        <!-- JUNIT -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>5.11.0-M2</version>
        </dependency>
        
    </dependencies>

    <build>
		<plugins>
            <!-- Compiles the project's source code -->
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.12.1</version>
				<configuration>
					<release>21</release>
				</configuration>
			</plugin>
            <!--  Builds a JAR file from the compiled classes and resources -->
            <plugin>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.0.2</version>
            </plugin>
            <!-- Runs the unit tests of the project -->
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.2.5</version>
				<configuration>
					<argLine>--enable-preview</argLine>
				</configuration>
			</plugin>
            <!-- Runs the integration tests of the project -->
			<plugin>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>3.2.5</version>
				<configuration>
					<argLine>--enable-preview</argLine>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>